# eludris

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Eludris.example.toml  README.md  autodoc.py  docker-compose.next.yml  docker-compose.override.yml  docker-compose.prebuilt.yml  plan.md  test.py
..github/workflows/: build-cli.yml  build.yml  ci.yml  deploy-dev-portal.yml
.cargo/: config.toml
cli/: Cargo.toml  README.md  sqlx-data.json
cli/src/: attachments.rs  clean.rs  deploy.rs  lib.rs  logs.rs  main.rs  static_attachments.rs  stop.rs  update.rs
codegen/: Cargo.toml  README.md
codegen/src/: lib.rs  utils.rs
codegen/src/autodoc/: handle_enum.rs  handle_fn.rs  handle_struct.rs  mod.rs  models.rs  utils.rs
docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
docs/src/: config.ts
docs/src/components/: Header.astro  Sidebar.astro
docs/src/content/: config.ts
docs/src/content/changelogs/: 0.3.1.md  0.3.2.md  0.3.3.md  0.3.md
docs/src/content/docs/: cli.md  conf.md  hosting.md  index.md
docs/src/content/extra/: detailed.md
docs/src/layouts/: Base.astro
docs/src/lib/: types.ts
docs/src/pages/: index.astro
docs/src/pages/changelogs/: [...slug].astro
docs/src/pages/docs/: [...slug].astro
docs/src/pages/extra/: [...slug].astro
docs/src/pages/reference/: [...slug].astro  data_to_md.ts
effis/: Cargo.toml  Dockerfile  README.md
effis/src/: main.rs  rate_limit.rs
effis/src/routes/: buckets.rs  index.rs  mod.rs  static_routes.rs
integration-tests/: Cargo.toml  README.md
integration-tests/src/: main.rs
migrations/: 20221128214127_files.sql  20230527171822_users.sql  20230528121747_meta.sql  20230528121949_sessions.sql
oprish/: Cargo.toml  Dockerfile  README.md
oprish/src/: cleanup.rs  database.rs  email.rs  main.rs  rate_limit.rs
oprish/src/routes/: mod.rs
oprish/src/routes/messages/: mod.rs
oprish/src/routes/sessions/: create.rs  delete.rs  get.rs  mod.rs
oprish/src/routes/users/: create.rs  delete.rs  get.rs  mod.rs  profile.rs  reset_password.rs  update.rs  verify.rs
pandemonium/: Cargo.toml  Dockerfile  README.md
pandemonium/src/: handle_connection.rs  main.rs  rate_limit.rs  utils.rs
static/: delete.html  password-reset.html  user-updated.html  verify.html
tests/: Eludris.toml  docker-compose.yml  test-other  test-text.txt
todel/: Cargo.toml  sqlx-data.json
todel/src/: lib.rs
todel/src/conf/: effis.rs  email.rs  mod.rs  oprish.rs  pandemonium.rs
todel/src/http/: client_ip.rs  databases.rs  mod.rs  response.rs  token_auth.rs
todel/src/ids/: mod.rs
todel/src/models/: files.rs  gateway.rs  info.rs  messages.rs  mod.rs  response.rs  sessions.rs  users.rs
todel/src/models/logic/: email.rs  files.rs  meta.rs  mod.rs  sessions.rs  users.rs
