[package]
name = "eludris"
edition = "2021"
version.workspace = true
documentation.workspace = true
license = "MIT"
description = "A simple CLI to help you manage your Eludris instance"
homepage = "https://github.com/eludris/eludris"
repository = "https://github.com/eludris/eludris"
readme = "README.md"
categories = [
	"command-line-utilities"
]
keywords = ["eludris"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.1.1", features = ["derive"] }
console = "0.15.5"
dialoguer = "0.10.3"
directories = "5.0.1"
dotenvy = "0.15.7"
env_logger = "0.10.0"
indicatif = "0.17.3"
log = "0.4.17"
reqwest = { version = "0.11.14" }
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "macros", "postgres", "offline"] }
todel = { version = "0.4.0-alpha1", path = "../todel", features = ["logic"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "process"] }
toml = "0.7.4"
