[package]
name = "todel_codegen"
edition = "2021"
version.workspace = true
documentation = "https://docs.rs/todel_codegen"
license = "MIT"
description = "Codegen crate for todel"
homepage = "https://github.com/eludris/eludris"
repository = "https://github.com/eludris/eludris"
readme = "README.md"
keywords = ["eludris"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
syn = { version = "1.0.107", features = ["full"] }
