[package]
name = "effis"
edition = "2021"
version.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todel = { features = ["http"], version = "0.4.0-alpha1", path = "../todel" }
anyhow = "1.0.71"
dotenvy = "0.15.6"
env_logger = "0.10.0"
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_redis", "sqlx_postgres"] }
tokio = { version = "1.21.2", features = ["sync", "rt-multi-thread", "macros"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
