[package]
name = "integration-tests"
edition = "2021"
version.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["json", "multipart"] }
serde_json = "1.0.96"
todel = { version = "0.4.0-alpha1", path = "../todel" }
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
