[package]
name = "oprish"
edition = "2021"
version.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
log = "0.4.17"
env_logger = "0.10.0"
todel = { features = ["http"], path = "../todel", version = "0.4.0-alpha1" }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_redis", "sqlx", "sqlx_postgres"] }
anyhow = "1.0.71"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = ["postgres", "macros"] }
rand = "0.8.5"
lettre = { version = "0.10.4", default-features = false, features = ["smtp-transport", "builder", "hostname", "tokio1", "tokio1-rustls-tls", "pool"] }
argon2 = "0.5.0"
chrono = "0.4.26"
