[package]
name = "pandemonium"
edition = "2021"
version.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.6"
env_logger = "0.10.0"
futures = "0.3.24"
log = "0.4.17"
redis = { version = "0.22.3", features = ["tokio-comp"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
todel = { features = ["logic"], version = "0.4.0-alpha1", path = "../todel" }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.19.0", features = ["rustls"] }
