[package]
name = "todel"
edition = "2021"
version.workspace = true
documentation = "https://docs.rs/todel"
license = "MIT"
description = "The Eludris shared models and logic crate"
homepage = "https://github.com/eludris/eludris"
repository = "https://github.com/eludris/eludris"
readme = "README.md"
keywords = ["eludris"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", optional = true }
argon2 = { version = "0.5.0", optional = true }
ffprobe = { version = "0.3.3", optional = true }
hmac = { version = "0.12.1", optional = true }
image = { version = "0.24.5", optional = true }
imagesize = { version = "0.10.1", optional = true }
jwt = { version = "0.16.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
lettre = { version = "0.10.4", features = [
    "smtp-transport",
    "builder",
    "hostname",
    "tokio1",
    "tokio1-rustls-tls",
    "pool",
], default-features = false, optional = true }
log = { version = "0.4.17", optional = true }
rand = { version = "0.8.5", optional = true }
redis = { version = "0.22.3", features = ["tokio-comp"], optional = true }
regex = { version = "1.8.3", optional = true }
rocket = { version = "0.5.0-rc.2", optional = true, features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.3", features = [
    "sqlx_postgres",
    "deadpool_redis",
    "sqlx",
], optional = true }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.96", optional = true }
serde_with = "3.0.0"
sha2 = { version = "0.10.6", optional = true }
sha256 = { version = "1.1.1", optional = true }
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "offline",
    "ipnetwork",
], optional = true }
todel_codegen = { version = "0.4.0-alpha.1", path = "../codegen" }
tokio = { version = "1.22.0", optional = true }
toml = { version = "0.5.9", optional = true }
tree_magic_mini = { version = "3.0.3", optional = true }
ubyte = { version = "0.10.3", features = ["serde"] }
url = { version = "2.2.2", optional = true }

[features]
logic = [
    "dep:anyhow",
    "dep:argon2",
    "dep:hmac",
    "dep:jwt",
    "dep:lazy_static",
    "dep:lettre",
    "dep:log",
    "dep:rand",
    "dep:redis",
    "dep:regex",
    "dep:serde_json",
    "dep:sha2",
    "dep:sha256",
    "dep:sqlx",
    "dep:tokio",
    "dep:toml",
    "dep:url",
]
http = [
    "logic",
    "dep:ffprobe",
    "dep:image",
    "dep:imagesize",
    "dep:rocket",
    "dep:rocket_db_pools",
    "dep:tree_magic_mini",
]
